--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,26 @@
-font-family: 'Cardo', serif;
-font-family: 'Open Sans', sans-serif;
+/*font-family: 'Cardo', serif;
+*/
 body {
     margin: 0;
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
     color: #6c7279;
+    background-color: #fff;
+    -webkit-font-smoothing: antialiased;
 }
 
 *,
 *:before,
 *:after {
     box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+p {
+    margin: 0 0 10px;
 }
 
 /* Container
@@ -26,11 +36,122 @@ body {
 ==================== */
 
 .header {
-    padding: 35px 0;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 .header__inner {
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid #515369;
+    padding: 35px 0;
+    align-items: center;
+}
+
+/* Navigation
+==================== */
+
+.nav {
+    display: flex;
+    font-size: 13px;
+    text-transform: uppercase;
 
 }
+
+.nav__link {
+    margin-left: 50px;
+    color: #fff;
+    text-decoration: none;
+    opacity: .75;
+    transition: opacity .1s linear;
+}
+
+.nav__link:first-child {
+    margin-left: 0;
+}
+
+.nav__link:hover {
+    opacity: 1;
+}
+
+/* Intro
+==================== */
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 750px;
+    padding-top: 100px;
+    background: #31344e url("../img/intro-bg.jpg") center no-repeat;
+}
+
+.intro__inner {
+    width: 100%;
+    max-width: 970px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.intro__title {
+    margin: 0 0 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 1.1;
+    color: #fff;
+    text-transform: uppercase;
+
+}
+
+.intro__subtitle {
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #fff;
+    margin-bottom: 60px;
+
+}
+
+
+/* Button
+==================== */
+
+.btn {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 13px;
+    color: #fff;
+    font-weight: 600;
+    font-family: inherit;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 14px 40px;
+    border-radius: 2px;
+    border: 0;
+    cursor: pointer;
+    transition: background .1s linear;
+}
+
+.btn--red {
+    background-color: #e84545;
+}
+
+.btn--red:hover {
+    background-color: #dd3434;
+}
+
+
+
+
+
+
+
+
+
+
+
