--- a/css/style.css
+++ b/css/style.css
@@ -145,13 +145,97 @@ p {
     background-color: #dd3434;
 }
 
+/* Features
+==================== */
 
+.features {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 95px 0;
+}
 
+.features__item {
+    width: 33.33333%;
+    text-align: center;
+    padding: 0px 20px;
+    margin: 25px 0px;
+}
+}
 
+.features__icon {
+    margin-bottom: 25px;
+}
 
+.features__title {
+    margin-bottom: 20px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #2d3033;
+    text-transform: uppercase;
+}
 
+.features__text {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #6c7279;
+}
 
+/* Works
+==================== */
 
+.works {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+.works__item {
+    width: 25%;
+    height: 350px;
+    border: 1px solid #fff;
+    border-right: 1px solid #fff;
+    position: relative;
+    overflow: hidden;
+}
+
+.works__item:hover .works__content {
+    opacity: 1
+}
+
+.works__photo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate3d(-50%, -50%, 0);
+}
+
+.works__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(232, 69, 69, .9);
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    transition: opacity .2s linear;
+}
+
+.works__title {
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.works__text {
+    font-size: 14px;
+    color: #fff;
+}
 
 
