--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ p {
     font-family: inherit;
     text-transform: uppercase;
     text-decoration: none;
+    text-align: center;
     padding: 14px 40px;
     border-radius: 2px;
     border: 0;
@@ -144,6 +145,10 @@ p {
 
 .btn--red:hover {
     background-color: #dd3434;
+}
+
+.btn--long {
+    min-width: 280px;
 }
 
 /* Features
@@ -292,6 +297,10 @@ p {
     display: flex;
 }
 
+.social--footer {
+    justify-content: center;
+}
+
 .social__item {
     display: flex;
     justify-content: center;
@@ -317,6 +326,21 @@ p {
 
 .social__item:hover .social__icon {
     fill: #000;
+}
+
+.social--footer .social__item {
+    background-color: transparent;
+    border-width: 2px;
+    border-color: #fff;
+    border-radius: 2px;
+}
+
+.social--footer .social__item:hover {
+    background-color: #fff;
+}
+
+.social--footer .social__icon {
+    fill: #fff;
 }
 
 /* Reviews
@@ -368,5 +392,89 @@ p {
     font-size: 13px;
     font-weight: 700;
     text-transform: uppercase;
+    color: #fff;
+}
+
+/* Download
+==================== */
+
+
+.dowload {
+    margin: 90px 0;
+    text-align: center;
+}
+
+.download__title {
+    margin-bottom: 10px;
+    font-size: 28px;
+    color: #2d3033;
+    font-weight: 300;
+}
+
+.dowload__text {
+    font-size: 13px;
+    font-weight: 700;
+    color: #2d3033;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+
+/* Footer
+==================== */
+
+.footer {
+    background-color: #3a3e64;
+}
+
+.footer__inner {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 70px 0;
+}
+
+.footer__block {
+    width: 33.33333%;
+    text-align: center;
+    padding: 0 15px;
+}
+
+.footer__title {
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.footer__address {
+    font-size: 14px;
+    font-style: normal;
+    line-height: 1.5;
+    color: rgba(255, 255, 255, .5);
+}
+
+.footer__text {
+    font-size: 14px;
+    font-style: normal;
+    line-height: 1.5;
+    color: rgba(255, 255, 255, .5);
+}
+
+/* Copyright
+==================== */
+
+.copyright {
+    background-color: #313454;
+    padding: 30px 0;
+}
+
+.copyright__text {
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #808080;
+}
+
+.copyright__text span {
     color: #fff;
 }
