--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ p {
     height: 750px;
     padding-top: 100px;
     background: #31344e url("../img/intro-bg.jpg") center no-repeat;
+    background-size: cover;
 }
 
 .intro__inner {
@@ -478,3 +479,110 @@ p {
 .copyright__text span {
     color: #fff;
 }
+
+/* Burger
+==================== */
+
+.burger {
+    display: none;
+    background: none;
+    border: 0;
+    cursor: pointer;
+    padding: 9px 2px;
+}
+
+.burger__item {
+    display: block;
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    font-size: 0;
+    color: transparent;
+    position: relative;
+}
+
+.burger__item:before, .burger__item:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    z-index: 1;
+}
+
+.burger__item:before {
+    top: -8px;
+}
+
+
+.burger__item:after {
+    bottom: -8px;
+}
+
+/* Media
+==================== */
+
+@media (max-width: 991px) {
+
+    /* Nav */
+    .nav {
+        display: none;
+    }
+
+    /*burger*/
+    .burger {
+        display: block;
+    }
+
+    /*Intro*/
+    .intro__title {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 767px) {
+
+    /* Intro */
+    .intro {
+        height: auto;
+        padding-top: 130px;
+        padding-bottom: 30px;
+    }
+    .intro__title {
+        font-size: 30px;
+    }
+    .intro__subtitle {
+        font-size: 16px;
+        margin-bottom: 40px;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
