update: add styles

--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,10 @@ p {
     .intro__title {
         font-size: 40px;
     }
+    /* Features */
+    .features__item {
+        width: 50%;
+    }
 }
 
 @media (max-width: 767px) {
