--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,16 @@ p {
     z-index: 1000;
 }
 
+.header.fixed {
+    height: auto;
+    position: fixed;
+    background: #31344e;
+}
+.header.fixed .header__inner {
+    padding: 15px 0;
+    border-bottom: 0;
+}
+
 .header__inner {
     display: flex;
     justify-content: space-between;
