update: create burger menu and slider reviews

--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,16 @@ p {
 .reviews__item {
     display: flex;
     flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.reviews__slider {
+    height: 500px;
+    overflow: hidden;
+}
+
+.reviews__slider.slick-initialized {
+    height: auto;
 }
 
 .reviews__photo {
@@ -405,6 +415,44 @@ p {
     font-weight: 700;
     text-transform: uppercase;
     color: #fff;
+}
+
+.slick-dots {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0 0 10px;
+    list-style: none;
+    width: 50%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+}
+
+.slick-dots li {
+    margin: 0 5px;
+}
+
+.slick-dots button {
+    width: 15px;
+    height: 15px;
+    padding: 0;
+    background: #fff;
+    border-radius: 50%;
+    border: 0;
+    opacity: .5;
+    cursor: pointer;
+    font-size: 0;
+    color: transparent:
+}
+
+.slick-dots button:focus {
+    outline: 0;
+}
+
+.slick-dots .slick-active button {
+    opacity: 1;
 }
 
 /* Download
@@ -549,8 +597,20 @@ p {
 
     .nav {
         display: none;
+        width: 100%;
+        flex-direction: column;
+        text-align: right;
+        background-color: #31344e;
+        position: absolute;
+        top: 100%;
+        right: 0;
     }
-
+    .nav.show {
+        display: flex;
+    }
+    .nav__link {
+        padding: 9px 15px;
+    }
     /*burger*/
 
     .burger {
